<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_arrival"
        android:color="@color/black"
        android:icon="@drawable/ic_baseline_flight_land_24"
        android:title="@string/arrival" />

    <item
        android:id="@+id/navigation_departure"
        android:icon="@drawable/ic_baseline_flight_takeoff_24"
        android:title="@string/departure" />

    <item
        android:id="@+id/navigation_flight_ticket"
        android:icon="@drawable/ic_baseline_photo_camera_24"
        android:title="@string/flight_ticket" />

    <item
        android:id="@+id/navigation_save_flight"
        android:color="@color/black"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/save" />

</menu>